# rusToniESP

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README-board-config.md  README.md  architecture.md  build.rs  diagram.json  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
.github/workflows/: rust_ci.yml
config/boards/: esp32.toml  esp32s3.toml
src/: lib.rs  main.rs
src/app/: mod.rs
src/board/: config.rs  mod.rs
src/domain/: mod.rs
src/drivers/: mod.rs  rfid.rs  storage.rs
src/services/: mod.rs  rfid_service.rs  storage_service.rs  web_service.rs
src/services/web_assets/: advanced.html  files.html  index.html
src/services/web_service/: handlers.rs  utils.rs
src/util/: mod.rs
