[package]
name = "rus-toni-esp"
version = "0.1.0"
authors = ["RaulSMS <raulampu@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "rus-toni-esp"
harness = false 

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    
opt-level = "z"

[dependencies]
log = "0.4"
anyhow = "1.0"

# Core ESP-IDF abstraction layers
esp-idf-hal = "0.46.2"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync", "alloc"] }

# Pure Rust hardware & filesystem abstractions
embedded-hal = "1.0"
embedded-io = "0.6.1"

# Async and timing controls
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
heapless = "0.9.1"
enumset = "1.1.13"
percent-encoding = "2.3.2"


[build-dependencies]
embuild = "0.33"
toml = "0.8"       
serde = { version = "1.0", features = ["derive"] }
